--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,13 +5,80 @@
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+  <h2>Next fights!</h2>
+  <ion-card>
+    <ion-card-content>
+      <ion-card-title>
+        <strong>Serena</strong> vs <strong>Bonnie</strong>
+      </ion-card-title>
+      <ion-item>
+        <ion-icon name="star-outline" item-left large></ion-icon>
+        <h2>Serena</h2>
+        <p>1620 points</p>
+      </ion-item>
+      <ion-item>
+        <ion-icon name="star-outline" item-left large></ion-icon>
+        <h2>Bonnie</h2>
+        <p>327 points</p>
+      </ion-item>
+      <p style="text-align: right;">In <em>7 minutes</em></p>
+    </ion-card-content>
+  </ion-card>
+
+    <ion-card>
+    <ion-card-content>
+      <ion-card-title>
+        <strong>Serena</strong> vs <strong>Bonnie</strong>
+      </ion-card-title>
+      <ion-item>
+        <ion-icon name="star-outline" item-left large></ion-icon>
+        <h2>Serena</h2>
+        <p>1620 points</p>
+      </ion-item>
+      <ion-item>
+        <ion-icon name="star-outline" item-left large></ion-icon>
+        <h2>Bonnie</h2>
+        <p>327 points</p>
+      </ion-item>
+      <p style="text-align: right;">In <em>7 minutes</em></p>
+    </ion-card-content>
+  </ion-card>
+
+    <ion-card>
+    <ion-card-content>
+      <ion-card-title>
+        <strong>Serena</strong> vs <strong>Bonnie</strong>
+      </ion-card-title>
+      <ion-item>
+        <ion-icon name="star-outline" item-left large></ion-icon>
+        <h2>Serena</h2>
+        <p>1620 points</p>
+      </ion-item>
+      <ion-item>
+        <ion-icon name="star-outline" item-left large></ion-icon>
+        <h2>Bonnie</h2>
+        <p>327 points</p>
+      </ion-item>
+      <p style="text-align: right;">In <em>7 minutes</em></p>
+    </ion-card-content>
+  </ion-card>
+
+    <ion-card>
+    <ion-card-content>
+      <ion-card-title>
+        <strong>Serena</strong> vs <strong>Bonnie</strong>
+      </ion-card-title>
+      <ion-item>
+        <ion-icon name="star-outline" item-left large></ion-icon>
+        <h2>Serena</h2>
+        <p>1620 points</p>
+      </ion-item>
+      <ion-item>
+        <ion-icon name="star-outline" item-left large></ion-icon>
+        <h2>Bonnie</h2>
+        <p>327 points</p>
+      </ion-item>
+      <p style="text-align: right;">In <em>7 minutes</em></p>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
