add jwt for login

--- a/src/pages/battle/battle.html
+++ b/src/pages/battle/battle.html
@@ -15,6 +15,7 @@
 
 <ion-content padding>
 <h3>Bets:</h3>
+Todo: add battle info
 <ion-card *ngFor="let bet of bets" >
     <ion-card-content >
       <ion-card-title (click)="toBattlePage(battle)">
