--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -19,7 +19,7 @@
          </button>
       </ion-card-title>
       <ion-item>
-        <p>Start : {{getLocalTime(battle.startTime)}} </p>
+        <p>Start  {{getLocalTime(battle.startTime)}} </p>
         <button ion-button [navPush]="makeBetPage" [navParams]="battle">Bet!!</button>
       </ion-item>
     </ion-card-content>
