small login change

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -15,13 +15,13 @@
         <ion-input type="text" [(ngModel)]="login.pass" name="title"></ion-input>
       </ion-item>
       <button ion-button type="submit" block>LOGIN</button>
+  </form>
       <ion-item>
         no account yet ?
       </ion-item>
       <ion-item>
         <ion-label>E-mail</ion-label>
-        <ion-input type="text" [(ngModel)]="login.mail" name="title"></ion-input>
+        <ion-input type="text" [(ngModel)]="mail" name="title"></ion-input>
       </ion-item>
-      <button ion-button type="submit" block>SIGNUP</button>
-    </form>
+      <button ion-button (click)='signUp()' block>SIGNUP</button>
 </ion-content>
