--- a/src/pages/bet/bet.html
+++ b/src/pages/bet/bet.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the Battle page.
+  Generated template for the Bet page.
 
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,29 +7,15 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>battle #{{battle.id}}</ion-title>
+    <ion-title>bet</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-<p>Start  {{getLocalTime(battle.startTime)}} </p>
-  <ion-list *ngFor="let i of [0,1]">
-    <ion-list-header (click)="alertTrainerInfo(trainers[i])"><h3>Trainer {{i + 1}}: {{trainers[i].name}}</h3></ion-list-header>
 
-    <ion-item *ngFor="let pokemon of battle.teams[i+1].pokemons" (click)="alertPokInfo(pokemon)">
-    <ion-avatar item-left>
-      <img src='/assets/sprites/pokemon/{{pokemon}}.png'>
-    </ion-avatar>
-    <h5 *ngIf=pokemons>{{getPokemon(pokemon).name}}</h5>
-    </ion-item>
-  </ion-list>
-  <div *ngIf="masterService.isLogged() ">
-  <button ion-button full [navPush]="makeBetPage" [navParams]="{event: battle, type: 'battles', choices: [trainers[0].name, trainers[1].name]}" >BET</button>
-  <div *ngIf="isAnyBet()">
-  <p> </p>
-  <h1>Bets:</h1>
+<h1>Bets:</h1>
     <ion-card *ngFor="let bet of bets" >
       <ion-card-content >
         <ion-card-title (click)="toBattlePage(battle)">
@@ -41,12 +27,11 @@
         </ion-item>
         <ion-item *ngIf="bet.childs && hasChild(bet)">
         <button ion-button [navPush]="betPage" [navParams]="{bets: bet.childs}" icon-right>
-        <ion-icon name="arrow-dropright" item-right></ion-icon>
+        <ion-icon name="arrow-dropright"></ion-icon>
         {{bet.childs.length}} bets
         </button>
         </ion-item>
       </ion-card-content>
     </ion-card>
-  </div>
-  </div>
+
 </ion-content>
