--- a/src/pages/makeBet/makeBet.html
+++ b/src/pages/makeBet/makeBet.html
@@ -19,7 +19,14 @@
         <ion-label>Amount</ion-label>
         <ion-input type="number" [(ngModel)]="bet.amount" name="amount"></ion-input>
       </ion-item>
-      <button ion-button (click)="bet.choice = 1" type="submit" block>{{choices[0]}}</button>
-      <button ion-button (click)="bet.choice = 2" type="submit" block>{{choices[1]}}</button>
+      <button ion-button (click)="bet.choice = 1" type="submit" block>
+        {{choices[0]}} /
+        <p *ngIf(odds)>/ win : {{getOdds(1, bet.amount)}} </p>
+      </button>
+      <button ion-button (click)="bet.choice = 2" type="submit" block>
+        {{choices[1]}} /
+        <p *ngIf(odds)>/ win : {{getOdds(2, bet.amount)}} </p>
+      </button>
+
 </form>
 </ion-content>
