--- a/src/pages/user/user.html
+++ b/src/pages/user/user.html
@@ -51,11 +51,10 @@ Bet #{{bet.id}} on {{getType(bet.parent)}}: #{{bet.parent||bet.battle}}
 <h2> Finished Bets: </h2>
 <ion-list>
 <ion-item *ngFor="let bet of fBets">
-<div class={{getResult(bet)}} >
-Bet #{{bet.id}} on {{getType(bet.parent)}}: #{{bet.parent||bet.battle}}
-<p *ngIf(transactions)>{{getIncome(bet)}}</p>
-</div>
-</ion-item>
+  <ion-icon name={{getResult(bet)}} ></ion-icon>
+  Bet #{{bet.id}} on {{getType(bet.parent)}}: #{{bet.parent||bet.battle}}
+  <p *ngIf(transactions)>{{getIncome(bet)}}</p>
+  </ion-item>
 </ion-list>
 
 </ion-content>
