--- a/src/pages/user/user.html
+++ b/src/pages/user/user.html
@@ -17,7 +17,7 @@
 <ion-list *ngIf(login)>
   <ion-item>
     <ion-icon name="person" item-left></ion-icon>
-      {{login.name}}
+      {{login.name}} // id:{{login.id}}
   </ion-item>
 
   <ion-item>
